@@ -27,6 +27,8 @@
 - API Change: Batch and Decal setColor(float) renamed to setPackedColor for differentiation, since the conversion from float to Color is lossy.
 - API Change: PolygonSprite getVertexColor renamed to getPackedColor to match other classes.
 - API Change: FreeTypeFontGenerator only generates a missing glyph if \0 is in the characters.
+- API Change: Vector2 angle(Vector2) returns value in the [0, 360) range.
+- API Change: Vector2 angle(Vector2) and angleRad(Vector2) now correctly return counter-clockwise angles.
 
 [1.9.8]
 - Add iPhoneX images
